feat(devx): updated docs to v1.32.2. Imported relevant code examples.

--- a/docs/content/_snippets/initialize-iota-client-cli.mdx
+++ b/docs/content/_snippets/initialize-iota-client-cli.mdx
@@ -1,6 +1,6 @@
 :::info 
 
-See [Publish a Package](/developer/getting-started/first-app/publish.mdx) for a more detailed guide on publishing packages or [IOTA Client CLI](/references/cli/client.mdx) for a complete reference of `client` commands in the IOTA CLI.
+See [Publish a Package](../developer/getting-started/publish.mdx) for a more detailed guide on publishing packages or [IOTA Client CLI](/references/cli/client.mdx) for a complete reference of `client` commands in the IOTA CLI.
 
 :::
 
