--- a/docs/content/developer/getting-started/connect.mdx
+++ b/docs/content/developer/getting-started/connect.mdx
@@ -71,10 +71,10 @@ Enter `y` to proceed. You receive the following response:
 #### 2. Select the Network
 
 ```
-IOTA Full node server URL (Defaults to IOTA Devnet if not specified) :
+IOTA Full node server URL (Defaults to IOTA Testnet if not specified) :
 ```
 
-If you want to connect to the [Devnet](#devnet), you can simply press `Enter`.
+If you want to connect to the [Testnet](#testnet), you can simply press `Enter`.
 
 <AlphaNet />
 
