--- a/docs/content/developer/getting-started/get-coins.mdx
+++ b/docs/content/developer/getting-started/get-coins.mdx
@@ -53,7 +53,7 @@ You can also get tokens from your [local faucet](local-network.mdx#use-the-local
 You can also access the faucet using the IOTA TypeScript-SDK, as shown in the example below:
 
 ```typescript
-import { requestIOTAFromFaucetV0, getFaucetHost } from '@iota/iota-sdk/faucet';
+import { getFaucetHost, requestIOTAFromFaucetV0 } from '@iota/iota-sdk/faucet';
 
 // get tokens from the Devnet faucet server
 await requestIOTAFromFaucetV0({
