--- a/docs/content/developer/iota-101.mdx
+++ b/docs/content/developer/iota-101.mdx
@@ -10,7 +10,7 @@ In many education systems, 101-level classes are those that teach core competenc
 Everything on the IOTA blockchain is an object. These topics use code examples to demonstrate how to create these specific types of objects. 
 
 - [Create Coins](iota-101/create-coin/create-coin.mdx)
-- [Create NFTs](iota-101/create-nft.mdx)
+- [Create NFTs](iota-101/nft/create-nft.mdx)
 
 ## Working with PTBs
 
