--- a/docs/content/developer/standards/kiosk.mdx
+++ b/docs/content/developer/standards/kiosk.mdx
@@ -103,7 +103,7 @@ To use an IOTA Kiosk, you must create one and have the `KioskOwnerCap` that matc
 ### Create an IOTA Kiosk using programmable transaction blocks
 
 ```javascript
-let tx = new TransactionBlock();
+let tx = new Transaction();
 tx.moveCall({
     target: '0x2::kiosk::default'
 });
@@ -127,7 +127,7 @@ Kiosk is designed to be shared. If you choose a different storage model, such as
 ### Create an IOTA Kiosk with advanced options using programmable transaction blocks
 
 ```javascript
-let tx = new TransactionBlock();
+let tx = new Transaction();
 let sender = "0x...";
 
 let [kiosk, kioskOwnerCap] = tx.moveCall({
@@ -170,7 +170,7 @@ To place an item to the Kiosk, the owner needs to call the `iota::kiosk::place` 
 ### Place an item using programmable transaction blocks
 
 ```javascript
-let tx = new TransactionBlock();
+let tx = new Transaction();
 
 let itemArg = tx.object('<ID>');
 let kioskArg = tx.object('<ID>');
@@ -204,7 +204,7 @@ To take an item from a kiosk you must be the kiosk owner. As the owner, call the
 ### Take an item from a kiosk using programmable transaction blocks
 
 ```javascript
-let tx = new TransactionBlock();
+let tx = new Transaction();
 
 let itemId = tx.pure.id('<ITEM_ID>');
 let kioskArg = tx.object('<ID>');
@@ -253,7 +253,7 @@ When you use the `lock` function, similar to using the `place` function, you spe
 ### Lock an item using programmable transaction blocks
 
 ```javascript
-const tx = new TransactionBlock();
+const tx = new Transaction();
 
 let kioskArg = tx.object('<ID>');
 let kioskOwnerCapArg = tx.object('<ID>');
@@ -296,7 +296,7 @@ When you list an item, IOTA emits a `kiosk::ItemListed` event that  contains the
 ### List an item using programmable transaction blocks
 
 ```javascript
-let tx = new TransactionBlock();
+let tx = new Transaction();
 
 let kioskArg = tx.object('<ID>');
 let capArg = tx.object('<ID>');
@@ -334,7 +334,7 @@ When you delist an item, IOTA emits a `kiosk::ItemDelisted` event that contains 
 ### Delist an item using programmable transaction blocks
 
 ```javascript
-let tx = new TransactionBlock();
+let tx = new Transaction();
 let kioskArg = tx.object('<ID>');
 let capArg = tx.object('<ID>');
 let itemId = tx.pure.id('<ID>');
@@ -440,7 +440,7 @@ You can use the PTB-friendly `kiosk::borrow_val` function. It allows you to take
 ### Mutable borrow with `borrow_val` using programmable transaction blocks
 
 ```javascript
-let tx = new TransactionBlock();
+let tx = new Transaction();
 
 let itemType = 'ITEM_TYPE';
 let itemId = tx.pure.id('<ITEM_ID>');
@@ -471,7 +471,7 @@ When someone purchases an item, IOTA stores the proceeds from the sale in the Ki
 ### Withdraw proceeds using programmable transaction blocks
 
 ```javascript
-let tx = new TransactionBlock();
+let tx = new Transaction();
 let kioskArg = tx.object('<ID>');
 let capArg = tx.object('<ID>');
 
