--- a/docs/content/references/cli.mdx
+++ b/docs/content/references/cli.mdx
@@ -17,6 +17,12 @@ To get the latest version of the CLI, you can run the following command from a t
 cargo install --locked --git https://github.com/iotaledger/iota.git --branch <BRANCH-NAME> --features gas-profiler iota
 ```
 
+:::info
+
+The `--features gas-profiler` flag is necessary only if you want to run gas profiles for transactions.
+
+:::
+
 ## IOTA CLI commands
 
 There are a number of top-level commands available, to get an overview of them, use the `iota help` command.
