--- a/docs/content/developer/iota-101/transactions/ptb/building-ptb.mdx
+++ b/docs/content/developer/iota-101/transactions/ptb/building-ptb.mdx
@@ -5,11 +5,11 @@ description: Using the IOTA TypeScript SDK, you can create programmable transact
 
 This guide explores creating a programmable transaction block (PTB) on IOTA using the TypeScript SDK. For an overview of what a PTB is, see [Programmable Transaction Blocks](prog-txn-blocks.mdx) in the Concepts section. If you don't already have the IOTA TypeScript SDK, follow the [install instructions](../../../../references/ts-sdk/typescript/install.mdx) on the IOTA TypeScript SDK site.
 
-This example starts by constructing a PTB to send IOTA. If you are familiar with the legacy IOTA transaction types, this is similar to a `payIota` transaction. To construct transactions, import the `TransactionBlock` class, and construct it:
+This example starts by constructing a PTB to send IOTA. If you are familiar with the legacy IOTA transaction types, this is similar to a `payIota` transaction. To construct transactions, import the `Transaction` class, and construct it:
 
 ```ts
-import { TransactionBlock } from "@iota/iota-sdk";
-const txb = new TransactionBlock();
+import { Transaction } from "@iota/iota-sdk";
+const txb = new Transaction();
 ```
 
 Using this, you can then add transactions to this PTB.
@@ -34,7 +34,7 @@ interface Transfer {
 // Procure a list of some IOTA transfers to make:
 const transfers: Transfer[] = getTransfers();
 
-const txb = new TransactionBlock();
+const txb = new Transaction();
 
 // First, split the gas coin into multiple coins:
 const coins = txb.splitCoins(
@@ -48,10 +48,10 @@ transfers.forEach((transfer, index) => {
 });
 ```
 
-After you have the PTB defined, you can directly execute it with a `signer` using `signAndExecuteTransactionBlock`.
+After you have the PTB defined, you can directly execute it with a `signer` using `signAndExecuteTransaction`.
 
 ```ts
-signer.signAndExecuteTransactionBlock({ transactionBlock: txb });
+signer.signAndExecuteTransaction({ Transaction: txb });
 ```
 
 ## Constructing inputs
@@ -77,8 +77,8 @@ IOTA supports following transaction commands:
     - Example: `txb.transferObjects([txb.object(thing1), txb.object(thing2)], txb.pure(myAddress))`
 - `txb.moveCall({ target, arguments, typeArguments })`: Executes a Move call. Returns whatever the IOTA Move call returns.
     - Example: `txb.moveCall({ target: '0x2::devnet_nft::mint', arguments: [txb.pure(name), txb.pure(description), txb.pure(image)] })`
-- `txb.makeMoveVec({ type, objects })`: Constructs a vector of objects that can be passed into a moveCall. This is required as there's no other way to define a vector as an input.
-    - Example: `txb.makeMoveVec({ objects: [txb.object(id1), txb.object(id2)] })`
+- `txb.makeMoveVec({ type, elements })`: Constructs a vector of objects that can be passed into a moveCall. This is required as there's no other way to define a vector as an input.
+    - Example: `txb.makeMoveVec({ elements: [txb.object(id1), txb.object(id2)] })`
 - `txb.publish(modules, dependencies)`: Publishes a Move package. Returns the upgrade capability object.
 
 ## Passing transaction results as arguments
@@ -121,7 +121,7 @@ You might need to explicitly call `setSender()` on the PTB to ensure that the `s
 :::
 
 ```ts
-const txb = new TransactionBlock();
+const txb = new Transaction();
 
 // ... add some transactions...
 
@@ -130,11 +130,11 @@ await txb.build({ provider });
 
 In most cases, building requires your JSON RPC provider to fully resolve input values.
 
-If you have PTB bytes, you can also convert them back into a `TransactionBlock` class:
+If you have PTB bytes, you can also convert them back into a `Transaction` class:
 
 ```ts
-const bytes = getTransactionBlockBytesFromSomewhere();
-const txb = TransactionBlock.from(bytes);
+const bytes = getTransactionBytesFromSomewhere();
+const txb = Transaction.from(bytes);
 ```
 
 ## Building offline
@@ -142,7 +142,7 @@ const txb = TransactionBlock.from(bytes);
 In the event that you want to build a PTB offline (as in with no `provider` required), you need to fully define all of your input values, and gas configuration (see the following example). For pure values, you can provide a `Uint8Array` which is used directly in the transaction. For objects, you can use the `Inputs` helper to construct an object reference.
 
 ```ts
-import { Inputs } from "@iota/iota-sdk";
+import { Inputs } from "@iota/iota-sdk/transactions";
 
 // For pure values:
 txb.pure(pureValueAsBytes);
@@ -196,9 +196,9 @@ txb.setGasPayment([coin1, coin2]);
 
 ### dApp / Wallet integration
 
-The Wallet Standard interface has been updated to support the `TransactionBlock` kind directly. All `signTransaction` and `signAndExecuteTransaction` calls from dApps into wallets is expected to provide a `TransactionBlock` class. This PTB class can then be serialized and sent to your wallet for execution.
+The Wallet Standard interface has been updated to support the `Transaction` kind directly. All `signTransaction` and `signAndExecuteTransaction` calls from dApps into wallets is expected to provide a `Transaction` class. This PTB class can then be serialized and sent to your wallet for execution.
 
-To serialize a PTB for sending to a wallet, IOTA recommends using the `txb.serialize()` function, which returns an opaque string representation of the PTB that can be passed from the wallet standard dApp context to your wallet. This can then be converted back into a `TransactionBlock` using `TransactionBlock.from()`.
+To serialize a PTB for sending to a wallet, IOTA recommends using the `txb.serialize()` function, which returns an opaque string representation of the PTB that can be passed from the wallet standard dApp context to your wallet. This can then be converted back into a `Transaction` using `Transaction.from()`.
 
 :::tip
 
@@ -208,17 +208,17 @@ You should not build the PTB from bytes in the dApp code. Using `serialize` inst
 
 ```ts
 // Within a dApp
-const tx = new TransactionBlock();
-wallet.signTransactionBlock({ transactionBlock: tx });
+const tx = new Transaction();
+wallet.signTransaction({ Transaction: tx });
 
 // Your wallet standard code:
-function handleSignTransactionBlock(input) {
-  sendToWalletContext({ transactionBlock: input.transactionBlock.serialize() });
+function handleSignTransaction(input) {
+  sendToWalletContext({ Transaction: input.Transaction.serialize() });
 }
 
 // Within your wallet context:
 function handleSignRequest(input) {
-  const userTx = TransactionBlock.from(input.transaction);
+  const userTx = Transaction.from(input.transaction);
 }
 ```
 
@@ -227,13 +227,13 @@ function handleSignRequest(input) {
 The PTB builder can support sponsored PTBs by using the `onlyTransactionKind` flag when building the PTB.
 
 ```ts
-const txb = new TransactionBlock();
+const txb = new Transaction();
 // ... add some transactions...
 
 const kindBytes = await txb.build({ provider, onlyTransactionKind: true });
 
 // Construct a sponsored transaction from the kind bytes:
-const sponsoredTxb = TransactionBlock.fromKind(kindBytes);
+const sponsoredTxb = Transaction.fromKind(kindBytes);
 
 // You can now set the sponsored transaction data that is required:
 sponsoredTxb.setSender(sender);
