--- a/docs/content/operator/snapshots.mdx
+++ b/docs/content/operator/snapshots.mdx
@@ -35,54 +35,6 @@ Formal snapshots provide a mechanism for a node to restore to a canonical state 
 
 Because these snapshots do not contain indexes, they are most immediately useful for validators and state sync Full nodes (SSFNs). You can upload snapshots to remote object stores like S3, Google Cloud Storage, Azure Blob Storage, and similar services. These services typically run the export process in the background so there is no degradation in performance for your Full node. With snapshots stored in the cloud, you can recover from catastrophic failures in your system or hardware more efficiently.
 
-## Enabling snapshots
-
-Full nodes do not take snapshots by default. To enable this feature you must apply specific configs to your Full node.
-
-Follow these steps to change the configs for a Full node:
-
-1. Stop your node, if it's running.
-2. Open your `fullnode.yaml` config file and apply config updates as the following sections show.
-3. Save the `fullnode.yaml` file and restart the node.
-
-### Enabling DB snapshots
-
-Add an entry to the config file for `db-checkpoint-config`. Using Amazon's S3 service as an example:
-
-```yaml
-db-checkpoint-config:
-  perform-db-checkpoints-at-epoch-end: true
-  perform-index-db-checkpoints-at-epoch-end: true
-  object-store-config:
-    object-store: "S3"
-    bucket: "<BUCKET-NAME>"
-    aws-access-key-id: "<ACCESS-KEY>"
-    aws-secret-access-key: "<SHARED-KEY>"
-    aws-region: "<BUCKET-REGION>"
-    object-store-connection-limit: 20
-```
-
-- `object-store`: The remote object store to upload snapshots. Set as Amazon's `S3` service in the example.
-- `bucket`: The S3 bucket name to store the snapshots.
-- `aws-access-key-id` and `aws-secret-access-key`: AWS authentication information with write access to the bucket.
-- `aws-region`: Region where bucket exists.
-- `object-store-connection-limit`: Number of simultaneous connections to the object store.
-
-### Enabling Formal snapshots
-
- Add an entry to the config file for `state-snapshot-write-config`. Using Amazon's S3 service as an example:
-   ```yaml
-   state-snapshot-write-config:
-     object-store-config:
-       object-store: "S3"
-       bucket: "<BUCKET-NAME>"
-       aws-access-key-id: "<ACCESS-KEY>"
-       aws-secret-access-key: "<SHARED-KEY>"
-       aws-region: "<BUCKET-REGION>"
-       object-store-connection-limit: 200
-   ```
-   The configuration settings shown in the example are specific to AWS S3, but GCS, Azure Storage, and Cloudflare R2 are all supported.
-
 ## Restoring a Full node using snapshots
 
 ### Restoring using RocksDB snapshots
@@ -93,30 +45,32 @@ To restore from a RocksDB snapshot, follow these steps:
 1. Place the snapshot into the directory that the `db-config` value points to in your `fullnode.yaml` file. For example, if the `db-config` value points to `/opt/iota/db/authorities_db/full_node_db` and you want to restore from epoch 10, then copy the snapshot to the directory with this command:
 
    You can use the aws cli (provided you have credentials to associate with the download):
-   `aws s3 cp s3://<BUCKET_NAME>/epoch_10 /opt/iota/db/authorities_db/full_node_db/live --recursive`.
+   `aws s3 cp s3://<BUCKET_NAME>/epoch_10 /opt/iota/db/authorities_db/full_node_db/live --recursive --request-payer`.
    
    An alternative is to use `iota-tool` to copy the files:
    ```shell
-   iota-tool download-db-snapshot --epoch "<EPOCH-NUMBER>" \
+   iota-tool download-db-snapshot --latest \
        --network <NETWORK> --snapshot-bucket <BUCKET-NAME> \
        --snapshot-bucket-type <TYPE> --path <PATH-TO-NODE-DB> \
        --num-parallel-downloads 25 \
        --skip-indexes \
        --no-sign-request
    ```
-   - `--epoch`: The epoch that you want to download, for example `200`. The buckets hosted by the IOTA Foundation will only keep the last 90 epochs.
+   - `--epoch`: The epoch that you want to download, for example `200`. The buckets hosted by the IOTA Foundation will only keep the last 90 epochs, you can check the most recent epoch on the [IOTA Explorer](https://explorer.iota.cafe).
+   - `--latest`: Rather than explicitly passing a epoch via `--epoch`, you can pass the `--latest` flag, which will automatically select the latest snapshot`
    - `--network`: Network to download snapshot for. Defaults to "mainnet".
    - `--path`: Path to snapshot directory on local filesystem.
    - `--no-sign-request`: If set, `--snapshot-bucket` and `--snapshot-bucket-type` are ignored, and Cloudflare R2 is used.
-   - `--snapshot-bucket`: Source snapshot bucket name, eg `iota-mainnet-snapshots`.
-   - `--snapshot-bucket-type`: Snapshot bucket type. GCS and S3 currently supported.
+   - `--snapshot-bucket`: Source snapshot bucket name, eg `iota-mainnet-snapshots`. This cannot be used with `--no-sign-request`.
+   - `--snapshot-bucket-type`: Snapshot bucket type. GCS and S3 currently supported. This cannot be used with `--no-sign-request`.
    - `--skip-indexes`: Skips downloading the very large `indexes/` dir, used by jsonrpc on the fullnode.
 
    The following environment variables are used if `--no-sign-request` is not set:
    * *AWS*: `AWS_SNAPSHOT_ACCESS_KEY_ID`, `AWS_SNAPSHOT_SECRET_ACCESS_KEY`, `AWS_SNAPSHOT_REGION`
    * *GCS*: `GCS_SNAPSHOT_SERVICE_ACCOUNT_FILE_PATH`
    * *AZURE*: `AZURE_SNAPSHOT_STORAGE_ACCOUNT`, `AZURE_SNAPSHOT_STORAGE_ACCESS_KEY`
-
+   * 
+1. When using `iota-tool download-db-snapshot` the database is copied to the location you pass to `--path`, in a directory named `epoch_[NUM]`. Move this directory to the `live/` Full node database directory, for example `/opt/iota/db/authorities_db/full_node_db/live`.
 1. Make sure you update the ownership of the downloaded directory to the `iota` user (or whichever linux user you run `iota-node` as):
    
    `sudo chown -R iota:iota  /opt/iota/db/authorities_db/full_node_db/live`.
@@ -138,17 +92,17 @@ The following steps can be used to restore a node from a Formal snapshot:
 1. If it's running, stop the node.
 2. Run the command:
    ```shell
-   iota-tool download-formal-snapshot --epoch "<EPOCH-NUMBER>" --genesis "<PATH-TO-GENESIS-BLOB>" \
+   iota-tool download-formal-snapshot --latest --genesis "<PATH-TO-GENESIS-BLOB>" \
         --network <NETWORK> --snapshot-bucket <BUCKET-NAME> --snapshot-bucket-type <TYPE> \
         --path <PATH-TO-NODE-DB> --num-parallel-downloads 50 --no-sign-request
    ```
-   - `--epoch`: The epoch that you want to download, for example `200`. The buckets hosted by the IOTA Foundation will only keep the last 90 epochs.
+   - `--epoch`: The epoch that you want to download, for example `200`. The buckets hosted by the IOTA Foundation will only keep the last 90 epochs, you can check the most recent epoch on the [IOTA Explorer](https://explorer.iota.cafe).
    - `--genesis`: The path to the location of the network's `genesis.blob`.
    - `--network`: Network to download snapshot for. Defaults to "mainnet".
    - `--path`: Path to snapshot directory on local filesystem.
    - `--no-sign-request`: If set, `--snapshot-bucket` and `--snapshot-bucket-type` are ignored, and Cloudflare R2 is used.
-   - `--snapshot-bucket`: Source snapshot bucket name, eg `iota-mainnet-snapshots`.
-   - `--snapshot-bucket-type`: Snapshot bucket type. GCS and S3 currently supported.
+   - `--snapshot-bucket`: Source snapshot bucket name, eg `iota-mainnet-snapshots`. This cannot be used with `--no-sign-request`.
+   - `--snapshot-bucket-type`: Snapshot bucket type. GCS and S3 currently supported. This cannot be used with `--no-sign-request`.
 
    The following environment variables are used if `--no-sign-request` is not set:
    * *AWS*: `AWS_SNAPSHOT_ACCESS_KEY_ID`, `AWS_SNAPSHOT_SECRET_ACCESS_KEY`, `AWS_SNAPSHOT_REGION`
@@ -179,4 +133,50 @@ Testnet: `gs://iota-testnet-snapshots/`, `gs://iota-testnet-formal/`
 Mainnet: `gs://iota-mainnet-snapshots/`,  `gs://iota-mainnet-formal/`
 
 ![IOTA Managed Snapshots](images/iota-cloud-snapshots.png "A diagram that shows the current architecture of iota snapshot availability")
+
+## Enabling snapshots
+
+Full nodes do not take snapshots by default. To enable this feature you must apply specific configs to your Full node.
+
+Follow these steps to change the configs for a Full node:
+
+1. Stop your node, if it's running.
+2. Open your fullnode.yaml config file and apply config updates as the following sections show.
+3. Save the fullnode.yaml file and restart the node.
+
+### Enabling DB snapshots
+
+Add an entry to the config file for `db-checkpoint-config`. Using Amazon's S3 service as an example:
+   ```yaml
+   db-checkpoint-config:
+     perform-db-checkpoints-at-epoch-end: true
+     perform-index-db-checkpoints-at-epoch-end: true
+     object-store-config:
+       object-store: "S3"
+       bucket: "<BUCKET-NAME>"
+       aws-access-key-id: “<ACCESS-KEY>”
+       aws-secret-access-key: “<SHARED-KEY>”
+       aws-region: "<BUCKET-REGION>"
+       object-store-connection-limit: 20
+   ```
+- `object-store`: The remote object store to upload snapshots. Set as Amazon's `S3` service in the example.
+- `bucket`: The S3 bucket name to store the snapshots.
+- `aws-access-key-id` and `aws-secret-access-key`: AWS authentication information with write access to the bucket.
+- `aws-region`: Region where bucket exists.
+- `object-store-connection-limit`: Number of simultaneous connections to the object store.
+
+### Enabling Formal snapshots
+
+Add an entry to the config file for `state-snapshot-write-config`. Using Amazon's S3 service as an example:
+   ```yaml
+   state-snapshot-write-config:
+     object-store-config:
+       object-store: "S3"
+       bucket: "<BUCKET-NAME>"
+       aws-access-key-id: “<ACCESS-KEY>”
+       aws-secret-access-key: “<SHARED-KEY>”
+       aws-region: "<BUCKET-REGION>"
+       object-store-connection-limit: 200
+   ```
+The configuration settings shown in the example are specific to AWS S3, but GCS, Azure Storage, and Cloudflare R2 are all supported.
 
