--- a/docs/content/references/iota-identity/revocation-timeframe-2024.mdx
+++ b/docs/content/references/iota-identity/revocation-timeframe-2024.mdx
@@ -96,7 +96,7 @@ To allow verifiers to check the status of a [Revocation Timeframe Status](#revoc
 | :---------------- | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `id`              | The constraints on the `id` property are listed in the [DID Core service specification](https://www.w3.org/TR/did-core/#services). The `id` property MUST be a DID URL uniquely identifying the revocation bitmap. |
 | `type`            | The `type` property MUST be `"RevocationTimeframe2024"`.                                                                                                                                                           |
-| `serviceEndpoint` | The `serviceEndpoint` MUST be generated according to the service endpoint generation algorithm described in [`RevocationBitmap2022`](revocation-bitmap-2022.mdx#service-endpoint-generation-algorithm)..                                                                                                                    |
+| `serviceEndpoint` | The `serviceEndpoint` MUST be generated according to the service endpoint generation algorithm described in [`RevocationBitmap2022`](revocation-bitmap-2022.mdx#service-endpoint-generation-algorithm).                                                                                                                    |
 
 #### Example
 
