--- a/docs/content/references/cli/ceremony.mdx
+++ b/docs/content/references/cli/ceremony.mdx
@@ -3,9 +3,9 @@ title: IOTA Genesis Ceremony CLI
 description: The IOTA Genesis Ceremony CLI provides commands for building a Genesis blob file.
 ---
 
-The IOTA CLI `genesis-ceremony` command allows the orchestration of an Iota Genesis Ceremony, 
-where multiple remote validators can sign a genesis blob. Each step persists a file structure
-which can be shared (for instance, via github) with the validators.
+The IOTA CLI `genesis-ceremony` command allows the orchestration of an IOTA Genesis Ceremony, 
+where multiple remote validators can sign a genesis blob. Each step persists in a file structure
+that can be shared (for instance, via GitHub) with the validators.
 
 ## Commands
 
