--- a/docs/content/references/cli/ceremony.mdx
+++ b/docs/content/references/cli/ceremony.mdx
@@ -42,7 +42,7 @@ The following example demonstrates how to build a genesis blob.
 ### Initialize the Genesis Builder
 
 This command creates a structure in the file system to persist the genesis builder. 
-Afterwards, the below commands can be used to set additional configuration.
+Afterward, the below commands can be used to set additional configurations.
 
 ```shell
 iota genesis-ceremony init
