fix(storybook): update import path

--- a/apps/ui-kit/src/storybook/stories/design-tokens/colors.stories.mdx
+++ b/apps/ui-kit/src/storybook/stories/design-tokens/colors.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, ColorPalette, ColorItem } from '@storybook/blocks';
 import {
     IOTA_PRIMITIVES_COLOR_PALETTE,
     SHADER_COLOR_PALETTE,
-} from '../../../lib/tailwind/constants/colors.constants';
+} from '../../../lib/constants/colors.constants';
 
 <Meta title="Design Tokens/Colors" />
 
