--- a/docs/content/developer/getting-started/iota-install.mdx
+++ b/docs/content/developer/getting-started/iota-install.mdx
@@ -24,9 +24,9 @@ always [build the binaries yourself from source](#install-from-source).
 
 IOTA supports the following operating systems:
 
-- Linux - Ubuntu version 20.04 (Bionic Beaver)
-- macOS - macOS Monterey
-- Microsoft Windows - Windows 10 and 11
+- Linux (Ubuntu/Debian recommended)
+- macOS
+- Microsoft Windows (10+)
 
 {/* TODO: Re-enable and check if we have packages published */}
 {/*
@@ -76,7 +76,7 @@ install the necessary binaries. You should start with the main IOTA binary.
 2. iota-faucet-`<OS>`-`<ARCHITECTURE>`: Local faucet to mint coins on a local network.
 3. iota-indexer-`<OS>`-`<ARCHITECTURE>`: An indexer for a local IOTA network.
 4. iota-node-`<OS>`-`<ARCHITECTURE>`: Run a local node.
-5. iota-test-validator-`<OS>`-`<ARCHITECTURE>`: Run test validators on a local network for development.
+5. iota-test-validator-`<OS>`-`<ARCHITECTURE>`: Run test validators on a local network for development, including indexer and faucet.
 6. iota-tool-`<OS>`-`<ARCHITECTURE>`: Provides utilities for IOTA.
 
 :::note
