--- a/docs/content/developer/getting-started/local-network.mdx
+++ b/docs/content/developer/getting-started/local-network.mdx
@@ -5,12 +5,12 @@ tags: [ how-to, install, setup, cli, typescript, sdk, testing ]
 # Local Development
 
 You can create a local IOTA network to develop and test your dApps with the latest changes in the IOTA repository. You
-can set it up using the `iota-test-validator` binary, which will start a local IOTA Full node, an IOTA validator, and a
+can set it up using the `iota-test-validator` binary, which will start a local IOTA network consisting of 4 IOTA validators with indexer and a
 test token faucet.
 
 ## Prerequisites
 
-You should [install IOTA](iota-install.mdx) to interact with the local node.
+You should [install the IOTA CLI tool](iota-install.mdx) to interact with the local node.
 
 ## Start a Local Network
 
@@ -165,7 +165,7 @@ The response resembles the following, but with different IDs:
 
 ### Prerequisites
 
-* [pnpm](https://pnpm.io/installation).
+* [pnpm](https://pnpm.io/installation)
 
 ### Install Dependencies
 
