--- a/docs/content/developer/cryptography/on-chain/ecvrf.mdx
+++ b/docs/content/developer/cryptography/on-chain/ecvrf.mdx
@@ -52,7 +52,7 @@ module math::ecvrf_test {
     use iota::event;
 
     /// Event on whether the output is verified
-    struct VerifiedEvent has copy, drop {
+    public struct VerifiedEvent has copy, drop {
         is_verified: bool,
     }
 
