--- a/docs/content/developer/cryptography/on-chain/hashing.mdx
+++ b/docs/content/developer/cryptography/on-chain/hashing.mdx
@@ -22,10 +22,9 @@ module test::hashing_std {
     use iota::object::{Self, UID};
     use iota::tx_context::TxContext;
     use iota::transfer;
-    use std::vector;
 
     /// Object that holds the output hash value.
-    struct Output has key, store {
+    public struct Output has key, store {
         id: UID,
         value: vector<u8>
     }
@@ -49,10 +48,9 @@ module test::hashing_iota {
     use iota::object::{Self, UID};
     use iota::tx_context::TxContext;
     use iota::transfer;
-    use std::vector;
 
     /// Object that holds the output hash value.
-    struct Output has key, store {
+    public struct Output has key, store {
         id: UID,
         value: vector<u8>
     }
