--- a/docs/content/developer/developer.mdx
+++ b/docs/content/developer/developer.mdx
@@ -5,23 +5,23 @@ description: Guides and documents for developers on the IOTA network. Whether yo
 
 The developer section is meant to introduce you to the Move programming language and its implementation on the IOTA network through examples, tasks, and conceptual content. This contains everything a developer needs to get started developing on top of the IOTA network.
 
-## Getting started
+## Getting Started
 
-If you are completely new to Move, you should start with the aptly named Getting Started section. Topics in that section introduce you to the IOTA monorepo, guide you through installing IOTA binaries, and introduce you to some key core concepts of blockchain technology, particularly how they relate to IOTA. 
+If you are completely new to Move, you should start with the aptly named Getting Started section. Topics in that section introduce you to the IOTA monorepo, guide you through installing IOTA binaries, and introduce you to some key core concepts of blockchain technology, particularly how they relate to IOTA. This sections contains everything you need to get your first dApp built and deployed.
 
 Go to [Getting Started](getting-started/getting-started.mdx).
-
-## Your first dApp
-
-If you prefer to jump right in to coding (after installing IOTA, of course), then the Your First dApp is the place for you. These topics show you how to work with Move packages and get them published on-chain. 
-
-Go to [Your First IOTA dApp](getting-started/create-a-package.mdx).
 
 ## IOTA 101
 
 The IOTA 101 section introduces the basics of IOTA that help you create smart contracts. These topics assume you are familiar with Move and the IOTA blockchain.
 
 Go to [IOTA 101](iota-101.mdx).
+
+## Standards
+
+Utilizing standards while developing applications is very important for composability. In this section you can find out all about the standards within the IOTA Move ecosystem for dealing with tokens, NFT like objects, and wallets. 
+
+Go to the [Standards](/developer/standards).
 
 ## IOTA compared to EVM
 
@@ -35,19 +35,25 @@ The Cryptography section demonstrates how to secure your smart contracts with cr
 
 Go to [Cryptography](cryptography.mdx).
 
-## Standards
-
-Utilizing standards while developing applications is very important for composability. In this section you can find out all about the standards within the IOTA Move ecosystem for dealing with tokens, NFT like objects, and wallets. 
-
-Go to the [Standards](/developer/standards).
-
 ## Advanced Topics
 
 The Advanced Topics section includes guides for advanced solutions (like asset tokenization). These topics assume you are familiar with Move and the IOTA blockchain.
 
 Go to the [Advanced Topics](advanced.mdx).
 
-## Developer cheat sheet
+## Migrating from IOTA/Shimmer Stardust
+
+IOTA Stardust becomes IOTA Rebased, and with it a lot of changes. Most assets are just available on the IOTA Rebased chain once it's available without any manual work but for integrations and in some situations you might need to migrate. This section covers the details of the migration and how you can prepare your integration to be IOTA Rebased compatible.
+
+Go to [Migrating from IOTA/Shimmer Stardust](stardust/stardust-migration.mdx).
+
+## Exchange Integration
+
+This section contains the technical details needed to integrate IOTA on a exchange. 
+
+Go to [Exchange integration](exchange-integration/exchange-integration.mdx).
+
+## Developer Cheat Sheet
 
 The cheat sheet is a compact overview of solutions for common problems and contains information on how to avoid common pitfalls for IOTA Move developers. This page contains important information that might get lost in the quantity of content available. Use this often-updated page to see around corners when starting a Move project or to refresh your memory on important concepts to be mindful of. 
 
@@ -59,14 +65,9 @@ Everything you need to know about our Layer 2 EVM Support, including working wit
 
 Go to [EVM Smart Contracts](iota-evm/introduction.mdx).
 
-## Migrating from IOTA/Shimmer Stardust
+## Decentralized Identity
 
-IOTA Stardust becomes IOTA Rebased, and with it a lot of changes. Most assets are just available on the IOTA Rebased chain once it's available without any manual work but for integrations and in some situations you might need to migrate. This section covers the details of the migration and how you can prepare your integration to be IOTA Rebased compatible.
+IOTA also offers a Decentralized Identity framework which can be utilized to provide and use digital decentralized identities for People, Organizations, Things and Objects. 
 
-Go to [Migrating from IOTA/Shimmer Stardust](stardust/stardust-migration.mdx).
+Go to the [IOTA Identity Framework](iota-identity/welcome.mdx) section.
 
-## Exchange integration
-
-This section contains the technical details needed to integrate IOTA on a exchange. 
-
-Go to [Exchange integration](exchange-integration/exchange-integration.mdx).
