--- a/docs/content/developer/getting-started/get-address.mdx
+++ b/docs/content/developer/getting-started/get-address.mdx
@@ -67,7 +67,7 @@ IOTA provides multiple ways to obtain an IOTA address. The following are the two
 
 :::note Supported Address Types
 
-IOTA supports multiple cryptographic algorithms for account generation. The two supported curves
+IOTA supports multiple signature schemes for account generation. The currently supported curves
 are `ed25519`, `secp256k1`, and `secp256r1`.
 
 :::
