fix: reference specific changes

--- a/docs/content/references/iota-glossary.mdx
+++ b/docs/content/references/iota-glossary.mdx
@@ -75,11 +75,7 @@ A [smart contract](https://en.wikipedia.org/wiki/Smart_contract) is an agreement
 
 ### IOTA {#iota}
 
-IOTA refers to the IOTA blockchain, and the [IOTA open source project](https://github.com/iotaledger/iota/) as a whole.
-
-### IOTA {#iota-1}
-
-IOTA is the native token to the IOTA network.
+IOTA refers to the IOTA blockchain, and the [IOTA open source project](https://github.com/iotaledger/iota/) as a whole, or the native token to the IOTA network.
 
 ### Total order {#total-order}
 
