fix: broken links

--- a/docs/content/references/execution-architecture/execution-layer.mdx
+++ b/docs/content/references/execution-architecture/execution-layer.mdx
@@ -9,4 +9,4 @@ It includes:
 - The [IOTA Execution Crate](iota-execution.mdx).
 - The [Adapter](adapter.mdx) and the [MoveVM](adapter.mdx#move-vm).
 - The [Native Functions & Object Runtime](natives.mdx).
-- The [IOTA Framework](../../references/framework.mdx).
+- The [IOTA Framework](../framework.mdx).
