--- a/docs/content/about-iota/iota-architecture/iota-architecture.mdx
+++ b/docs/content/about-iota/iota-architecture/iota-architecture.mdx
@@ -34,7 +34,7 @@ The following diagram describes the architectural structure for IOTA's solution.
 
 The core components are:
 
-- [Execution Layer](../execution-architecture/execution-layer.mdx)
+- [Execution Layer](../../references/execution-architecture/execution-layer.mdx)
 - [IOTA Node](../../operator/iota-full-node.mdx)
 - [IOTA RPC](../../references/iota-api)
 - [IOTA CLI](../../references/cli)
