--- a/docs/content/developer/getting-started/connect.mdx
+++ b/docs/content/developer/getting-started/connect.mdx
@@ -10,7 +10,7 @@ import AlphaNet from "../../_snippets/alphanet.mdx";
 
 ## IOTA CLI
 
-IOTA provides a [IOTA command line interface (CLI)](/references/cli/client.mdx) to interact with [IOTA networks](#iota-networks), it does the following and more:
+IOTA provides the [IOTA command line interface (CLI)](/references/cli/client.mdx) to interact with [IOTA networks](#iota-networks), it does the following and more:
 
 - Create and manage your private keys
 - Call and publish Move modules
