feat(devx): remove --gas-budget flag

--- a/docs/content/_snippets/publish-to-devnet-with-coins.mdx
+++ b/docs/content/_snippets/publish-to-devnet-with-coins.mdx
@@ -3,7 +3,7 @@ Before being able to publish your package to Testnet, you need Testnet IOTA toke
 Now that you have an account with some Testnet IOTA, you can deploy your contracts. To publish your package, use the following command in the same terminal or console:
 
 ```
-iota client publish --gas-budget <GAS-BUDGET>
+iota client publish
 ```
 
 For the gas budget, use a standard value such as `20000000`.
