--- a/docs/content/developer/advanced/asset-tokenization.mdx
+++ b/docs/content/developer/advanced/asset-tokenization.mdx
@@ -709,7 +709,7 @@ Select a package for specific instructions.
 In a terminal or console at the `move/asset_tokenization` directory of the project enter:
 
 ```bash
-IOTAiota client publish --gas-budget <GAS-BUDGET>
+IOTAiota client publish
 ```
 
 For the gas budget, use a standard value such as `20000000`.
@@ -753,7 +753,7 @@ For more details regarding this process, please consult the setup folder's [READ
 In a terminal or console at the `move/template` directory of the project enter:
 
 ```bash
-IOTAiota client publish --gas-budget <GAS-BUDGET>
+IOTAiota client publish
 ```
 
 For the gas budget, use a standard value such as `20000000`.
