--- a/docs/content/developer/cryptography/transaction-auth/multisig.mdx
+++ b/docs/content/developer/cryptography/transaction-auth/multisig.mdx
@@ -131,7 +131,7 @@ The response resembles the following:
 This section demonstrates how to use an object that belongs to a multisig address and serialize a transfer to be signed. The `tx_bytes` value can be any serialized transaction data where the sender is the multisig address. Use the `--serialize-unsigned-transaction` flag for supported commands in `iota client -h` (`publish`, `upgrade`, `call`, `transfer`, `transfer-iota`, `pay`, `pay-all-iota`, `pay-iota`, `split`, `merge-coin`) to output the Base64 encoded transaction bytes.
 
 ```shell
-iota client transfer --to <IOTA-ADDRESS> --object-id <OBJECT-ID> --gas-budget <GAS-AMOUNT> --serialize-unsigned-transaction
+iota client transfer --to <IOTA-ADDRESS> --object-id <OBJECT-ID> --serialize-unsigned-transaction
 
 Raw tx_bytes to execute: <TX_BYTES>
 ```
