--- a/docs/content/developer/iota-101/create-coin/regulated.mdx
+++ b/docs/content/developer/iota-101/create-coin/regulated.mdx
@@ -102,7 +102,7 @@ public fun remove_addr_from_deny_list(denylist: &mut DenyList, denycap: &mut Den
 To use these functions, you pass the `DenyList` object (`0x403`), your `DenyCap` object ID, and the address you want to either add or remove. Using the IOTA CLI, you could use `iota client call` with the required information:
 
 ```shell
-iota client call --function add_addr_from_deny_list --module regcoin --package <PACKAGE-ID> --args <DENY-LIST> <DENY-CAP> <ADDRESS-TO-DENY> --gas-budget <GAS-AMOUNT>
+iota client call --function add_addr_from_deny_list --module regcoin --package <PACKAGE-ID> --args <DENY-LIST> <DENY-CAP> <ADDRESS-TO-DENY>
 Transaction Digest: <DIGEST-HASH>
 ```
 
