--- a/docs/content/developer/iota-101/transactions/sign-and-send-txn.mdx
+++ b/docs/content/developer/iota-101/transactions/sign-and-send-txn.mdx
@@ -247,7 +247,7 @@ Create a transfer transaction in CLI. Set the $IOTA_ADDRESS to the one correspon
 
 ```shell
 iota client gas
-iota client transfer-iota --to $IOTA_ADDRESS --iota-coin-object-id $GAS_COIN_ID --gas-budget $GAS_BUDGET --serialize-unsigned-transaction
+iota client transfer-iota --to $IOTA_ADDRESS --iota-coin-object-id $GAS_COIN_ID --serialize-unsigned-transaction
 iota keytool sign --address $IOTA_ADDRESS --data $TX_BYTES
 iota client execute-signed-tx --tx-bytes $TX_BYTES --signatures $SERIALIZED_SIGNATURE
 ```
