Extend ReportValidator description

--- a/docs/content/references/cli/validator.mdx
+++ b/docs/content/references/cli/validator.mdx
@@ -21,7 +21,7 @@ Commands:
   display-metadata                  Display metadata about the validator
   update-metadata                   Update the validator metadata
   update-gas-price                  Update gas price that is used to calculate Reference Gas Price
-  report-validator                  Report or un-report a validator
+  report-validator                  Report or un-report a validator as bad or non-performant
   serialize-payload-pop             Serialize the payload that is used to generate Proof of Possession. This is useful to take the payload offline for an Authority protocol keypair to sign
   display-gas-price-update-raw-txn  Print out the serialized data of a transaction that sets the gas price quote for a validator
   help                              Print this message or the help of the given subcommand(s)
